--- a/MauiPong/Components/Layout/NavMenu.razor
+++ b/MauiPong/Components/Layout/NavMenu.razor
@@ -23,5 +23,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pong">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Pong
+            </NavLink>
+        </div>
     </nav>
 </div>
