--- a/MauiPong/Components/_Imports.razor
+++ b/MauiPong/Components/_Imports.razor
@@ -9,5 +9,7 @@
 @using MauiPong.Components
 @using Fluxor.Blazor
 @using Fluxor.Blazor.Web
+@using Fluxor.Blazor.Web.Components
+@using PongClassLibrary
 
 
