--- a/PongClassLibrary/PongComponent.razor.css
+++ b/PongClassLibrary/PongComponent.razor.css
@@ -1,6 +1,6 @@
-﻿.my-component {
-    border: 2px dashed red;
-    padding: 1em;
-    margin: 1em 0;
-    background-image: url('background.png');
+﻿
+.pong-game {
+    height: 800px;
+    width: 800px;
+    background-color: black;
 }
