--- a/MauiPong/Components/Layout/MainLayout.razor
+++ b/MauiPong/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using IDispatcher = Microsoft.Maui.Dispatching.IDispatcher
+@inherits LayoutComponentBase
+@inject IDispatcher Dispatcher
 
 <div class="page">
     <div class="sidebar">
