--- a/MauiPong/Components/Layout/NavMenu.razor
+++ b/MauiPong/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">MauiPong</a>
+        <a class="navbar-brand" href="">Pong</a>
     </div>
 </div>
 
@@ -29,5 +29,6 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Pong
             </NavLink>
         </div>
+
     </nav>
 </div>
