--- a/MauiPong/Components/_Imports.razor
+++ b/MauiPong/Components/_Imports.razor
@@ -5,11 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using MauiPong
-@using MauiPong.Components
-@using Fluxor.Blazor
-@using Fluxor.Blazor.Web
-@using Fluxor.Blazor.Web.Components
-@using PongClassLibrary
-
-
+@using Pong
+@using Pong.Components
