--- a/MauiPong/App.xaml
+++ b/MauiPong/App.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiPong"
-             x:Class="MauiPong.App">
+             xmlns:local="clr-namespace:Pong"
+             x:Class="Pong.App">
     <Application.Resources>
         <ResourceDictionary>
 
